--- a/css/doomtool.css
+++ b/css/doomtool.css
@@ -32,7 +32,7 @@
 
 #logo {
 	float: top;
-	background: url(/image/outerWorld_logo.v2.png) no-repeat left top;
+	background: url(/doomtool/image/outerWorld_logo.v2.png) no-repeat left top;
 	margin-left:2px;
 	margin-top:0;
 	width: 468px;
