--- a/css/doomtool.css
+++ b/css/doomtool.css
@@ -32,42 +32,39 @@
 
 #logo {
 	float: top;
-	background: url(/doomtool/image/outerWorld_logo.v2.png) no-repeat left top;
+	background: url(/doomtool/image/outerWorld_logo.v2.png) repeat-x left top;
 	margin-left:2px;
 	margin-top:0;
-	width: 468px;
+	/* width: 468px;*/
+	width: 99%;
 	height: 60px;
 }
 
-#substract {
-	float: left;
-	margin: 0;
-}
-
-#navigator {
+#menu {
 	float: left;
 	border: 2px;
 	margin-left: 0;
 	margin-top: 80px;
+	height: 25px;
 }
 
-#navigator h5 {
-    display: none;
-}
-#navigator ul {
-    padding: 0 0; 
+#menu ul {
+    padding: 0; 
     margin-left: 0; 
     border-bottom: 0 solid; 
     font: bold 20px Verdana, sans-serif; 
-}
-  
-#navigator ul li {
-    list-style: none;
-    margin: 0; 
+	text-align: center;
     display: inline; 
 }
   
-#navigator ul li a {
+#menu ul li {
+	float: left;
+    list-style: none;
+    margin: 0; 
+	display: block;
+}
+  
+#menu ul li a {
     padding: 3px 0.5em; 
     margin-left: 3px; 
     border: 0px solid;
@@ -76,86 +73,58 @@
     text-decoration: none;
 }
   
-#navigator ul li a:link {
+#menu ul li a:link {
     color: #448;
 }
   
-#navigator ul li a:visited {
+#menu ul li a:visited {
     color: #667;
 }
   
-#navigator ul li a:link:hover, #nav_first ul li a:visited:hover {
+#menu ul li a:link:hover, #nav_first ul li a:visited:hover {
     color: #000;
     background: transparent;
     border-color: #227;
 }
   
-#navigator ul li a#current {
+#menu ul li a#current {
     background: transparent; 
     border-bottom: 0px solid white;
 }
 
-#my_infor {
+#substract {
 	display: float;
-	position: relative;
 	width: 80%;
 	height: 160px;
-	margin-left: 20px;
-	top: 0;
-}
-#my_intro > p {
-	display: float;
-	position: relative;
-	margin-top: 100px;
+	margin: 50px 0 5px 0;
 }
 
-#myname {
-	position: relative;
-	left:0;
-	width:120px;
-	height: 24px;
-	top: 0px;
-}
-#mail {
-	position: relative;
-	left: 128px;
-	width: 320px;
-	height: 24px; 
-	top: -34px;
-	margin:0;
-}
-#qq {
-	position: relative;
-	left: 480px;
-	width: 240px;
-	height: 24px; 
-	top: -68px;
-	margin:0;
+#substract ul {
+	display: inline;
 }
 
-#work-location {
-	position: relative;
-	left:0;
-	width:240px;
-	height: 24px;
-	top: -72px;
+#substract ul li {
+	float: left;
+    list-style: none;
+    margin: 0; 
+	display: block;
 }
-#interest {
-	position: relative;
-	left:0;
-	width:240px;
-	height: 24px;
-	top: -72px;
-}
-
 
 #content {
 	position: relative;
-	margin-left: 10px;
-	margin-top: 10px;
+	float: left;
+	margin: 10px;
+	padding: 2px 0 0 0;
+	width: 98%;
 }
 
-#content p {
+#content > p {
+	border: #777 bold;
+	height: 18px;
+	font: bold 20px;
+	text-decoration: underline;
+	background: transparent;
+	
 }
 
 #footer {
