--- a/css/doomtool.css
+++ b/css/doomtool.css
@@ -32,20 +32,62 @@
 
 #logo {
 	float: top;
-	background: url(/doomtool/image/outerWorld_logo.v2.png) repeat-x left top;
-	margin-left:2px;
+	/* background: url(/doomtool/image/outerWorld_logo.v2.png) repeat-x left top; */
+	background: url(/image/outerWorld_logo.v2.png) repeat-x left top;
+	margin-left:0;
 	margin-top:0;
 	/* width: 468px;*/
-	width: 99%;
+	width: 100%;
 	height: 60px;
+}
+
+#substract {
+	display: float;
+	width: 100%;
+	height: 100px;
+	margin: 0;
+	background: #f9f999;
+	/*border: solid; */
+}
+
+#substract ul {
+	display: inline;
+	float: left;
+	width: 100%;
+	height: 10px;
+	margin: 0 0 10px 10%;
+	padding: 2px;
+}
+
+#substract ul li {
+	float: left;
+    list-style: none;
+    margin: 0 5px 0 0; 
+	display: block;
+}
+
+#substract ul li.fst_li {
+	margin: 0 0px 0 4px;
+	padding: 0;
+	width: 80px;
+	font: bold 16px Verdana, sans-serif;
+}
+
+#substract ul li.sec_li {
+	margin: 0 8px 0 8px;
+	text-decoration: underline;
+	width: 240px;
+	padding: 0;
 }
 
 #menu {
 	float: left;
 	border: 2px;
+	width: 100%;
 	margin-left: 0;
-	margin-top: 80px;
+	margin-top: 0;
 	height: 25px;
+	background: #f9f999;
 }
 
 #menu ul {
@@ -55,6 +97,7 @@
     font: bold 20px Verdana, sans-serif; 
 	text-align: center;
     display: inline; 
+	background: transparent;
 }
   
 #menu ul li {
@@ -92,23 +135,6 @@
     border-bottom: 0px solid white;
 }
 
-#substract {
-	display: float;
-	width: 80%;
-	height: 160px;
-	margin: 50px 0 5px 0;
-}
-
-#substract ul {
-	display: inline;
-}
-
-#substract ul li {
-	float: left;
-    list-style: none;
-    margin: 0; 
-	display: block;
-}
 
 #content {
 	position: relative;
